--- a/examples/openshift/nginx-plus-ingress-rc.yaml
+++ b/examples/openshift/nginx-plus-ingress-rc.yaml
@@ -30,6 +30,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
         # Uncomment the lines below to enable extensive logging and/or customization of
         # NGINX configuration with configmaps
         args:
