--- a/helm-chart/templates/rbac.yaml
+++ b/helm-chart/templates/rbac.yaml
@@ -15,17 +15,27 @@ rules:
   - services
   - endpoints
   verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
   - list
   - watch
 - apiGroups:
   - ""
   resources:
   - configmaps
-  - secrets
   verbs:
   - get
   - list
   - watch
+  - update
+  - create
 - apiGroups:
   - ""
   resources:
@@ -46,6 +56,12 @@ rules:
   verbs:
   - list
   - watch
+- apiGroups:
+  - "extensions"
+  resources:
+  - ingresses/status
+  verbs:
+  - update
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
