--- a/install/daemon-set/nginx-ingress.yaml
+++ b/install/daemon-set/nginx-ingress.yaml
@@ -22,13 +22,20 @@ spec:
           hostPort: 80
         - name: https
           containerPort: 443
-          hostPort: 443 
+          hostPort: 443
         env:
         - name: POD_NAMESPACE
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
         args:
           - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
           - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          #- -v=3 # Enables extensive logging. Useful for trooublshooting.
+         #- -report-ingress-status
+         #- -external-service=nginx-ingress
+         #- -enable-leader-election
