--- a/install/deployment/nginx-plus-ingress-with-prometheus.yaml
+++ b/install/deployment/nginx-plus-ingress-with-prometheus.yaml
@@ -30,11 +30,18 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
         args:
           - -nginx-plus
           - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
           - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
          #- -v=3 # Enables extensive logging. Useful for trooublshooting.
+         #- -report-ingress-status
+         #- -external-service=nginx-ingress
+         #- -enable-leader-election
       - image: nginx/nginx-prometheus-exporter:0.1.0
         name: nginx-prometheus-exporter
         ports:
